# BMP-Project

./: README.md
image_processor/: CMakeLists.txt  application.cpp  application.h  application_settings.cpp  application_settings.h  bmp.cpp  bmp.h  color_rgb.cpp  color_rgb.h  command_line_parser.cpp  command_line_parser.h  converter_image_bmp.cpp  converter_image_bmp.h  filter.h  image.cpp  image.h  image_processor.cpp  pipeline.cpp  pipeline.h  query_parameters.cpp  query_parameters.h
image_processor/filters/: crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h  soap_bubbles_filter.cpp  soap_bubbles_filter.h
